# ngx-cache-inspector

./: .travis.yml  LICENSE  README.md  ngx-cache-inspector.cabal  stack.yaml
app/: Main.hs
src/: Inspector.hs
src/Inspector/: Repl.hs
src/Inspector/Cli/: Args.hs
src/Inspector/Repl/: Prelude.hs
