name: ngx-cache-inspector
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright Piotr Bogdan (c) 2017
maintainer: ppbogdan@gmail.com
homepage: https://github.com/pbogdan/ngx-cache-inspector#readme
synopsis: Inspect nginx's cache files contents.
description:
    Inspect nginx's cache files contents, including headers and bodies.
category: Web
author: Piotr Bogdan
extra-source-files:
    README.md

source-repository head
    type: git
    location: https://github.com/pbogdan/ngx-cache-inspector

executable nci
    main-is: Main.hs
    build-depends:
        base >=4.9.0.0 && <4.10,
        protolude >=0.1.6 && <0.2,
        bytestring >=0.10.8.1 && <0.11,
        safe-exceptions >=0.1.4.0 && <0.2,
        ngx-cache-purge >=0.0.1 && <0.1,
        optparse-applicative >=0.12.1.0 && <0.13,
        text >=1.2.2.1 && <1.3,
        zlib >=0.6.1.2 && <0.7
    default-language: Haskell2010
    default-extensions: OverloadedStrings NoImplicitPrelude
    hs-source-dirs: app
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N

